--- a/src/main/webapp/assets/common/css/light-bootstrap-dashboard.css
+++ b/src/main/webapp/assets/common/css/light-bootstrap-dashboard.css
@@ -473,7 +473,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   position: relative;
   z-index: 2;
   float: right;
-  width: calc(100%);
+  width: calc(100% - 260px);
   min-height: 100%;
 }
 .main-panel > .content {
