--- a/src/main/webapp/WEB-INF/views/jspf/sidebar.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/sidebar.jspf
@@ -6,7 +6,7 @@
 		</div>
 
 		<ul class="nav">
-			<li class="active"><a href="<%=request.getContextPath()%>/"> <i class="pe-7s-graph"></i>
+			<li><a href="<%=request.getContextPath()%>/"> <i class="pe-7s-graph"></i>
 					<p>Tableau de bord</p>
 			</a></li>
 			<li><a href="<%=request.getContextPath()%>/see/clients"> <i class="pe-7s-menu"></i>
